# flam

./: package-lock.json  readme.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv_processor.cpp  opengl_renderer.cpp
app/src/main/java/com/example/edgedetection/: CameraManager.kt  FrameAnalyzer.kt  GLRenderer.kt  MainActivity.kt  OpenCVProcessor.kt
app/src/main/res/layout/: activity_main.xml
gl/: texture_manager.cpp
gl/shaders/: fragment.glsl  vertex.glsl
jni/: jni_bridge.cpp  native_helper.cpp
jni/include/: opencv_processor.h  opengl_renderer.h
web/: index.html  package.json  tsconfig.json
web/src/: viewer.ts
